doc/k8s/nginx-igress/jenkins-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins #服务在哪个空间内就写哪个空间
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    # ingress.kubernetes.io/whitelist-source-range: 192.168.43.85/32
spec:
  rules:
  - host: jenkins.k8sinternal.com  #此service的访问域名
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
